<resources>
    <string name="app_name">RxJavaDemo</string>
    <string name="first_button_name">点击绑定</string>
    <string name="second_button_name">跳转到的第二个界面</string>
    <string name="asyncSubject">AsyncSubject</string>
    <string name="BehaviorSubject">BehaviorSubject</string>
    <string name="publicSubject">PublishSubject</string>
    <string name="operator">操作符</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn6_text">跳转到BottomActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
